update base exception